--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 .wrap{
     width:500px;
 }
-#ol li{
+#ul li{
     line-height: 50px;
 }
-#ol li h1{
+#ul li h1{
     font-size: 22px;
     font-style:normal;
 }
