--- a/test/03/form/form.css
+++ b/test/03/form/form.css
@@ -1,19 +1,20 @@
-div{
+fieldset{
     position: relative;
-    margin:0 auto;
+    text-align: center;
+    border: none;
     height: 60px;
 }
-div span:first-child{
+fieldset span:first-child{
     position: absolute;
     right:60%;
     font-weight: bold;
 }
-div input{
+fieldset input{
     position: absolute;
     left: 42%;
     border-radius: 5px;
 }
-div span:last-child{
+fieldset span:last-child{
     visibility: hidden;
     padding-top: 7px;
     position: absolute;
